# Demo

./: README.MD
GeometryCalculator/: .gitignore  CMakeLists.txt  CMakePresets.json  README.MD
GeometryCalculator/examples/: CMakeLists.txt  cpp_example.cpp
GeometryCalculator/include/: geometry_c_api.h
GeometryCalculator/src/: geometry_c_api.cpp
mines_sweeper/: mines_sweeper.pro
mines_sweeper/src/: configdialog.cpp  minesweepscene.cpp
mines_sweeper/src/include/: mainwindow.h
pyside/: requirements.txt  tableview_demo.py  tableview_demo01.py  tableview_demo02 copy.py  tableview_demo02.py  tableview_demo02_lazy_loading.py  tableview_demo02_optimized.py  tableview_demo02_performance.py  tableview_demo02_ultra_optimized.py  tableview_demo04.py  tableview_demo05.py
pyside/buttongroup/: button_group_demo01.py  button_group_signal_test.py
pyside/tablewidget/: README.md  tableview_demo01.py  tableview_demo02.py  tableview_demo03.py  tableview_demo04.py
qt/GeometryCalculator/examples/: c_example.c
qt/GeometryCalculator/include/: export.h  geometry.h
qt/GeometryCalculator/src/: geometry.cpp
qt/GeometryCalculator/tests/: CMakeLists.txt  test_capi.cpp  test_geometry.cpp
qt/mines_sweeper/: .editorconfig  readme.md  res.qrc
qt/mines_sweeper/src/: cellitem.cpp  fielddata.cpp  mainwindow.cpp
qt/mines_sweeper/src/include/: cellitem.h  configdialog.h  fielddata.h  minesweepscene.h
qt/mines_sweeper/src/ui/: configdialog.ui  mainwindow.ui
